query result type changed to [][]string
